# OptixNN

./: CMakeLists.txt  README.md
OptixNNlib/: aligned_alloc.h  base_index.h  deterministic_rnn_descent.h  deterministic_rnn_descent_flat_index.h  distance_computer.h  distance_cosine.h  distance_l2.h  dot_product.h  interrupt_callback.h  neighbor.h  norm_backend.h  prefetch.h  rnn_descent.h  rnn_descent_flat_index.h  vector_storage.h  vector_types.h  vector_utils.h  visited_table.h
cmake/: ConfigCompiler.cmake  toolchain-arm64.cmake
examples/: CMakeLists.txt  build_index.cpp  omp_example.cpp  search_example.cpp
tests/: CMakeLists.txt
tests/asan/: test_asan.cpp
tests/common/: test_interrupt_callback.cpp  test_prefetch.cpp
tests/distance/: test_cosine_distance.cpp  test_distance_computer.cpp  test_l2_distance.cpp
tests/rnndescent/: test_rnn_descent.cpp  test_rnn_descent_flat_index.cpp
tests/simd/: test_simd_dot.cpp  test_simd_norm.cpp
tests/storage/: test_vector_storage.cpp
